--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             border: chartreuse solid 1px;
             position: absolute;
             padding: 20px;
-            margin-left: 10%;
-            margin-right: 10%;
+            margin-left: 15%;
+            margin-right: 15%;
             top: 100px;
             line-height: 25px;
             border-radius: 10px;
@@ -51,7 +51,7 @@
     </head>
     <header>
         <form id="form">
-            <p>Hey,<br>    Welcome to this simple yet addictive game of Tic-Tac-Toe. I hope you like this game. To start playing, enter your names and jump right into the game.<br>Do reach me in case of any feedback or suggestion for this </p><hr>
+            <p>Hey,<br>    Welcome to this simple yet addictive game of Tic-Tac-Toe. I hope you like this game. To start playing, enter your names and jump right into the game.<br>Do reach me in case of any feedback or suggestion for this <br><br>All the best !!</p><hr>
             Player 1 : <br>
             <input type="text" id="player1" style="color: white;" required><br>
             Player 2:<br>
