--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>js tut</title>
+        <title>Tic-Tac-Toe</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
@@ -75,6 +75,6 @@
         </div>
         
         <script src="javas.js"></script>
-        <footer style="position: fixed; bottom: 0px;">&copy; A Shivoy Dixit Production</footer>
+        <footer style="position: fixed; bottom: 0px;color: white;">&copy; A Shivoy Dixit Production</footer>
     </body>
 </html>
